--- a/assets/index.html
+++ b/assets/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>SkyTravel</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css"/>
-  <link rel="icon" type="image/png" href="images/favicon.png">
-</head>
-<body>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <title>SkyTravel</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" />
+    <link rel="icon" type="image/png" href="images/favicon.png">
+</head>
+
+<body>
+    <div class="mb-3 bg-white border-bottom shadow-sm">
+        <div class="container d-flex flex-column flex-md-row align-items-center p-3 px-md-4">
+            <h1 class="my-0 mr-md-auto font-weight-normal"><a href="#"><img src="images/logo.png" alt="スカイトラベル"></a></h1>
+            <nav class="my-2 my-md-0 mr-md-3">
+                <a class="p-2 text-dark" href="#">ヘルプ</a>
+                <a class="p-2 text-dark" href="#">サイトマップ</a>
+                <a class="p-2 text-dark" href="#">採用情報</a>
+            </nav>
+            <a class="btn btn-outline-primary" href="#recruit">お問い合わせ</a>
+        </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+    </script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
