--- a/assets/index.html
+++ b/assets/index.html
@@ -57,38 +57,57 @@
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
                 <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+                <li data-target="#myCarousel" data-slide-to="4"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img">
-                        <rect width="100%" height="100%" fill="#777" /></svg>
+                    <img src="images/slide01.jpg" alt="First slide">
                     <div class="container">
                         <div class="carousel-caption text-left">
-                            <h1>Example headline.</h1>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                            <h2>割引クーポンキャンペーン</h2>
+                            <p>旅行サイトでクーポンを配布していることは珍しくなく10,000円以上の割引になることもあります。プレミアムフライデー限定のクーポンもあるので、お得に活用してみてください！</p>
+                            <p><a class="btn btn-lg btn-primary" href="#campain" role="button">今日のいちおしクーポン</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img">
-                        <rect width="100%" height="100%" fill="#777" /></svg>
+                    <img src="images/slide02.jpg" alt=" Second slide">
                     <div class="container">
                         <div class="carousel-caption">
-                            <h1>Another example headline.</h1>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                            <h2>人気の定番コース</h2>
+                            <p>1週間なら、中4日間はまるまる時間を使うことが可能。定番の世界遺産コースをゆっくり見たり、日帰りで近くの都市に足を延ばしたりなど、ぜいたくな滞在ができます。</p>
+                            <p><a class="btn btn-lg btn-primary" href="#course" role="button">いろいろなコース案内へ</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img">
-                        <rect width="100%" height="100%" fill="#777" /></svg>
+                    <img src="images/slide03.jpg" alt="Third slide">
                     <div class="container">
                         <div class="carousel-caption text-right">
-                            <h1>One more for good measure.</h1>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                            <h2>プレミアムコンダクター</h2>
+                            <p>ツアーコンダクターオブザイヤーを受賞したスタッフはお客様から高い評価をいただいております。あなたの大切な旅にプレミアムな添乗員が同行するツアーはいかがでしょう？</p>
+                            <p><a class="btn btn-lg btn-primary" href="#staff" role="button">添乗員スタッフのご紹介</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/slide04.jpg" alt="Fourth slide">
+                    <div class="container">
+                        <div class="carousel-caption text-right">
+                            <h2>社員優遇による業績アップ</h2>
+                            <p>さまざまな取り組みを行う企業が増えていますが、なかでも、ユニークな社内制度を導入し、業績アップにつなげている各部署やコースでの取り組みや工夫を紹介していきます。</p>
+                            <p><a class="btn btn-lg btn-primary" href="#corporate" role="button">驚きの仕組み導入とは</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/slide05.jpg" alt="Fifth slide">
+                    <div class="container">
+                        <div class="carousel-caption text-right" style="top:50px">
+                            <h2>好きな気持ちが会社を創る!</h2>
+                            <p>海外旅行は感動と満足を創出する大事な「人」を変革の原動力としてバックアップサポートしていきます。マーケットの構造変化に柔軟に呼応しながらチャレンジ精神旺盛な方を募集いたします。</p>
+                            <p><a class="btn btn-lg btn-primary" href="#recruit" role="button">さまざまな採用形態を確認</a></p>
                         </div>
                     </div>
                 </div>
