--- a/assets/index.html
+++ b/assets/index.html
@@ -180,6 +180,78 @@
                 </div>
             </div>
         </section>
+        <section class="container my-5" id="course">
+            <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+                <h2 class="display-4">Course</h2>
+                <p class="lead">全国各地の発着ツアーをご紹介。フリープランは自由気ままに各地域ごとの定番ツアーや、<br>おすすめのツアーをそれぞれご紹介。ツアーの検索やご予約も簡単です。</p>
+            </div>
+            <div class="row mb-2">
+                <div class="col-md-6">
+                    <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col p-4 d-flex flex-column position-static">
+                            <strong class="d-inline-block mb-2 text-danger">Asia</strong>
+                            <h3 class="mb-0">
+                                <a class="text-dark font-weight-bold" href="#">買い尽くし台北</a>
+                            </h3>
+                            <div class="mb-1 text-muted">3日間</div>
+                            <p class="card-text mb-auto">往路送迎付き　朝食付き　カジュアルクラスのホテル　行き：午後発／帰り：午後～夕刻着</p>
+                            <a href="#">空き状況を見る</a>
+                        </div>
+                        <div class="col-auto d-none d-lg-block">
+                            <img class="card-img-right flex-auto d-none d-lg-block" src="images/course01.jpg" alt="台北">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col p-4 d-flex flex-column position-static">
+                            <strong class="d-inline-block mb-2 text-primary">North America</strong>
+                            <h3 class="mb-0">
+                                <a class="text-dark font-weight-bold" href="#">ゆっくりハワイ</a>
+                            </h3>
+                            <div class="mb-1 text-muted">5日間</div>
+                            <p class="card-text mb-auto">往路送迎付き　朝食付き　カジュアルクラスのホテル　行き：午前発／帰り：午後～夕刻着</p>
+                            <a href="#">空き状況を見る</a>
+                        </div>
+                        <div class="col-auto d-none d-lg-block">
+                            <img class="card-img-right flex-auto d-none d-lg-block" src="images/course02.jpg" alt="ハワイ">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col p-4 d-flex flex-column position-static">
+                            <strong class="d-inline-block mb-2 text-success">Europe</strong>
+                            <h3 class="mb-0">
+                                <a class="text-dark font-weight-bold" href="#">おしゃれにベニス</a>
+                            </h3>
+                            <div class="mb-1 text-muted">10日間</div>
+                            <p class="card-text mb-auto">往路送迎付き　朝食付き　カジュアルクラスのホテル　行き：午後発／帰り：午後～夕刻着</p>
+                            <a href="#">空き状況を見る</a>
+                        </div>
+                        <div class="col-auto d-none d-lg-block">
+                            <img class="card-img-right flex-auto d-none d-lg-block" src="images/course03.jpg" alt="ベニス">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col p-4 d-flex flex-column position-static">
+                            <strong class="d-inline-block mb-2 text-warning">North America</strong>
+                            <h3 class="mb-0">
+                                <a class="text-dark font-weight-bold" href="#">冒険リオデジャネイロ</a>
+                            </h3>
+                            <div class="mb-1 text-muted">14日間</div>
+                            <p class="card-text mb-auto">往路送迎付き　朝食付き　カジュアルクラスのホテル　行き：午後発／帰り：午後～夕刻着</p>
+                            <a href="#">空き状況を見る</a>
+                        </div>
+                        <div class="col-auto d-none d-lg-block">
+                            <img class="card-img-right flex-auto d-none d-lg-block" src="images/course04.jpg" alt="リオデジャネイロ">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="container">
