--- a/assets/index.html
+++ b/assets/index.html
@@ -252,6 +252,98 @@
                 </div>
             </div>
         </section>
+        <section class="container my-5" id="staff">
+            <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+                <h2 class="display-4">Staff</h2>
+                <p class="lead">各地域に精通したツアーコンダクターはご参加のお客様から高い評価をいただいております。<br>お客様のご旅行がより思い出深くなるよう、旅のサポートをさせていただきます。</p>
+            </div>
+            <div class="row text-center">
+                <div class="col-lg-4">
+                    <img class="rounded-circle img-thumbnail mb-3" src="images/staff01.jpg" alt="相川亜希" width="240" height="240">
+                    <h2>相川 亜希</h2>
+                    <p class="text-justify">常に明るく元気に！主役はお客様！どんなに悪天候でもストライキなどのトラブルに遭遇しても全てポジティブに考え、最終的に「笑顔」でお帰り頂ける様に影に日向に動き回ります！</p>
+                    <table class="table table-hover">
+                        <tr>
+                            <th>添乗歴約</th>
+                            <td>19年</td>
+                        </tr>
+                        <tr>
+                            <th>渡航国数</th>
+                            <td>105カ国</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">総合旅行業務取り扱い主任者</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">添乗員能力資格1級</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">JATA旅程管理研修講師認定</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">社内サブ添乗業務研修講師</td>
+                        </tr>
+                    </table>
+                    <p><a class="btn btn-lg btn-block btn-outline-primary" href="#" role="button">添乗ツアーはこちら &raquo;</a></p>
+                </div>
+                <div class="col-lg-4">
+                    <img class="rounded-circle img-thumbnail mb-3" src="images/staff02.jpg" alt="大塚千秋" width="240" height="240">
+                    <h2>大塚 千秋</h2>
+                    <p class="text-justify">常に冷静に落ち着いてがモットーです。たとえ忙しい行程のツアーでも、なるべくお客様のご旅行中にゆったりとした気分を味わって頂けるよう、心より最善を尽くして努力をしております。</p>
+                    <table class="table table-hover">
+                        <tr>
+                            <th>添乗歴約</th>
+                            <td>21年</td>
+                        </tr>
+                        <tr>
+                            <th>渡航国数</th>
+                            <td>40カ国</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">添乗員能力資格1級</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">JATA旅程管理研修講師認定</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">ツアコン奨励賞受賞</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">英語/ロシア語/ポルトガル語</td>
+                        </tr>
+                    </table>
+                    <p><a class="btn btn-lg btn-block btn-outline-primary" href="#" role="button">添乗ツアーはこちら &raquo;</a></p>
+                </div>
+                <div class="col-lg-4">
+                    <img class="rounded-circle img-thumbnail mb-3" src="images/staff03.jpg" alt="大友康隆" width="240" height="240">
+                    <h2>大友 康隆</h2>
+                    <p class="text-justify">初心を忘れず、楽しい旅を演出する。私には何度も訪れている場所・国でも、お客様にとっては最初で最後かもしれません。お客様の人生の彩りになるように心がけております。</p>
+                    <table class="table table-hover">
+                        <tr>
+                            <th>添乗歴約</th>
+                            <td>19年</td>
+                        </tr>
+                        <tr>
+                            <th>渡航国数</th>
+                            <td>45カ国</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">総合旅行業務取り扱い主任者</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">デスティネーションスペシャリスト</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">ドイツ認定</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">英語/スペイン語/中国語</td>
+                        </tr>
+                    </table>
+                    <p><a class="btn btn-lg btn-block btn-outline-primary" href="#" role="button">添乗ツアーはこちら &raquo;</a></p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="container">
