--- a/assets/index.html
+++ b/assets/index.html
@@ -52,7 +52,7 @@
         </nav>
     </header>
     <main>
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <div id="myCarousel" class="container carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -344,6 +344,38 @@
                 </div>
             </div>
         </section>
+        <section class="container my-5" id="corporate">
+            <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+                <h2 class="display-4">Corporate</h2>
+                <p class="lead">旅の楽しさ、美しさ、心地よさをお伝えし、高級感、信頼感、親しみやすさのあるご対応をします。<br>常に自身の成長とお客様の満足するサービスを心掛けていきます。</p>
+            </div>
+            <table class="table table-striped">
+                <tr>
+                    <th>社名</th>
+                    <td>スカイトラベル株式会社</td>
+                </tr>
+                <tr>
+                    <th>設立</th>
+                    <td>20XX年1月1日</td>
+                </tr>
+                <tr>
+                    <th>資本金</th>
+                    <td>1億2000万円（2010年12月31日）</td>
+                </tr>
+                <tr>
+                    <th>従業員数</th>
+                    <td>56名</td>
+                </tr>
+                <tr>
+                    <th>主要取引先銀行</th>
+                    <td>三井住友銀行 池袋支店<br>
+                        三菱東京UFJ銀行 西池袋支店<br>
+                        みずほ銀行 池袋支店
+                    </td>
+                </tr>
+            </table>
+        </section>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.971319642137!2d139.6978965152594!3d35.702323380189355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f5!3m3!1m2!1s0x60188d2f6cba44df%3A0x18b3bc4c95b9f078!2z44CSMTY5LTAwNzMg5p2x5Lqs6YO95paw5a6_5Yy655m-5Lq655S677yS5LiB55uu77yU4oiS77yY!5e0!3m2!1sja!2sjp!4v1577321331689!5m2!1sja!2sjp" width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     </main>
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="container">
