--- a/assets/index.html
+++ b/assets/index.html
@@ -376,6 +376,60 @@
             </table>
         </section>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.971319642137!2d139.6978965152594!3d35.702323380189355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f5!3m3!1m2!1s0x60188d2f6cba44df%3A0x18b3bc4c95b9f078!2z44CSMTY5LTAwNzMg5p2x5Lqs6YO95paw5a6_5Yy655m-5Lq655S677yS5LiB55uu77yU4oiS77yY!5e0!3m2!1sja!2sjp!4v1577321331689!5m2!1sja!2sjp" width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <section class="container my-5" id="recruit">
+            <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+                <h2 class="display-4">Recruit</h2>
+                <p class="lead">添乗員に必要な旅程管理主任者資格を取得する為の研修を常時行っております。<br>未経験でも充実した研修と万全のフォロー体制がありますのでご安心下さい。</p>
+            </div>
+            <form action="" method="post" class="needs-validation my-5" novalidate>
+                <div class="row">
+                    <div class="col-md-12 mb-3 text-center">
+                        <div class="form-check form-check-inline">
+                            <input id="recruit_stuff" name="recruit" type="radio" class="form-check-input" checked required>
+                            <label class="form-check-label" for="recruit_stuff">スタッフ募集の件で</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input id="recruit_part" name="recruit" type="radio" class="form-check-input" required>
+                            <label class="form-check-label" for="recruit_part">お問い合わせ</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input id="recruit_other" name="recruit" type="radio" class="form-check-input" required>
+                            <label class="form-check-label" for="recruit_other">その他</label>
+                        </div>
+                    </div>
+                    <div class="col-md-6 my-4">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">氏</span>
+                            </div>
+                            <input type="text" class="form-control form-control-lg" placeholder="山田" required>
+                            <div class="invalid-feedback">氏名は必須です。入力をお願いいたします。</div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 my-4">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">名</span>
+                            </div>
+                            <input type="text" class="form-control form-control-lg" placeholder="太郎" required>
+                            <div class="invalid-feedback">姓名は必須です。入力をお願いいたします。</div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 my-4">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">メール</span>
+                            </div>
+                            <input type="email" class="form-control form-control-lg" placeholder="you@example.com" required>
+                            <div class="invalid-feedback">メールアドレスは必須です。入力をお願いいたします。</div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 my-4">
+                        <hr class="my-4">
+                        <button class="btn btn-primary btn-lg btn-block" type="submit">送 信</button>
+                    </div>
+            </form>
+        </section>
     </main>
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="container">
