--- a/assets/index.html
+++ b/assets/index.html
@@ -476,9 +476,29 @@
             </div>
         </div>
     </footer>
+    <button type="button" class="btn btn-primary" id="backbtn">トップに戻る <span class="badge badge-light"><i class="fa fa-arrow-up"></i></span></button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
     </script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script>
+    $(function() {
+        var topBtn = $('#backbtn');
+        topBtn.hide();
+        $(window).scroll(function () {
+            if ($(this).scrollTop() > 500) {
+                topBtn.fadeIn();
+            } else {
+                topBtn.fadeOut();
+            }
+        });
+        topBtn.click(function () {
+            $('body,html').animate({
+                scrollTop: 0
+            }, 500);
+            return false;
+        });
+    });
+</script>
 </body>
 
 </html>
